Improve button appearance and fix gap issue on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -72,6 +72,7 @@ ul.plainlist {
 /* ===Buttons=== */
 .button {
   background-color: rgb(0,171,202);
+  border: 2px solid rgb(0,171,202);
   border-radius: 10px;
   color: rgb(255,255,255);
   display: inline-block;
@@ -83,8 +84,9 @@ ul.plainlist {
   color: rgb(255,255,255);
 }
 .button:hover {
-  box-shadow: 0 0 10px 3px rgb(0,171,202);
-  color: rgb(255,255,255);
+  background-color: transparent;
+  color: rgb(0,171,202);
+  cursor: pointer;
 }
 .hero a.button {
   display: none;
@@ -92,6 +94,7 @@ ul.plainlist {
 
 /* ===Forms===*/
 input, textarea {
+  border: 1px solid rgb(169,169,169);
   box-sizing: border-box;
   display: block;
   margin-bottom: 1em;
@@ -170,10 +173,14 @@ aside ul {
   margin: 0;
   text-align: center;
 }
-#logo a:hover {
+#logo a {
+  display: inline-block;
+  text-align: left;
+}
+/*#logo a:hover {
   background-color: rgb(30,30,30);
   text-decoration: none;
-}
+}*/
 
 /* ===Page header=== */
 main header {
@@ -266,18 +273,26 @@ nav a {
   white-space: nowrap;
 }
 nav a:visited { color: rgb(255,255,255); }
-nav a:hover { color: rgb(212,212,212); }
+nav a:hover {
+  background-color: rgb(30,30,30);
+  color: rgb(212,212,212);
+}
 
 /* ===Top navigation=== */
 #mobile-menu-toggle {
   color: rgb(255,255,255);
   font-size: 1.5em;
+  height: 30px;
   padding: 10px;
   position: absolute;
   right: 0;
+  text-align: center;
   transform: rotate(90deg);
+  width: 30px;
 }
 #mobile-menu-toggle:hover {
+  background-color: rgb(30,30,30);
+  text-decoration: none;
   color: rgb(212,212,212);
   cursor: pointer;
 }
